welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:40: error: illegal start of simple expression
	else if (car == "Y");
                            ^BDRBuggle:44: error: ';' expected but 'else' found.
	else if (car == "X")
        ^BDRBuggle:48: error: ';' expected but 'else' found.
	else quitter = true;
        ^